# ez-config

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml
ez_config/: __init__.py  core.py
ez_config_mgt/: __init__.py  core.py
tests/: conftest.py
tests/unit/: test_baseconfig.py
